datax-rs/tui/src/snapshots/datax_tui__pager_overlay__tests__static_overlay_snapshot_basic.snap
---
source: tui/src/pager_overlay.rs
assertion_line: 1368
expression: term.backend()
---
"/ S T A T I C / / / / / / / / / / / / / "
"one                                     "
"two                                     "
"three                                   "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit                              "
"                                        "
