datax-rs/tui/src/snapshots/datax_tui__pager_overlay__tests__transcript_overlay_renders_live_tail.snap
---
source: tui/src/pager_overlay.rs
assertion_line: 1109
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
"tail                                    "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit   esc to edit prev           "
"                                        "
